--- a/tests/test.webgl.html
+++ b/tests/test.webgl.html
@@ -9,6 +9,9 @@
     <script src="../vendor/stats.js"></script>
     <script src="../lib/recast.js"></script>
     <link rel="stylesheet" href="../node_modules/nodeunit/share/nodeunit.css"/>
+    <style>
+      body { margin:0; padding:0 }
+    </style>
     <script>
       var recast = this.recast;
       this.require = function () { return recast; };
@@ -19,10 +22,13 @@
     <h1 id="nodeunit-header">Recast.js Test Suite</h1>
     <script src="recast.test.webgl.js"></script>
     <script>
-      nodeunit.run({'recast.tests': exports});
+    nodeunit.run({'recast.tests': exports});
     </script>
     <button onclick="navigationMesh.parent ? scene.remove(navigationMesh) : scene.add(navigationMesh)">
       Toggle navigation mesh
+    </button>
+    <button id="sequence" onclick="sequence()" style="display:none">
+      Reboot sequence
     </button>
   </body>
 </html>
