--- a/tests/test.webgl.html
+++ b/tests/test.webgl.html
@@ -28,6 +28,8 @@
     <p>
     In this example, you can see the mesh processed by recast.js <br>and rendered with three.js<br><br>
     Each agents is controlled by recast.js, and a new random destination <br>is requested for each of them
+    <br><br>
+    Red polygons are unwalkable
     </p>
     
     <a href="test.webgl.html?agents=10">10 agents</a>
