--- a/tests/test.withworker.html
+++ b/tests/test.withworker.html
@@ -1,9 +1,14 @@
 <html>
   <head>
     <title>Recast.js Test Suite</title>
-    <script src="../node_modules/nodeunit/examples/browser/nodeunit.js"></script>
-    <script src="../lib/recast.withworker.js"></script>
-    <link rel="stylesheet" href="../node_modules/nodeunit/share/nodeunit.css"/>
+    <script src="../vendor/nodeunit/examples/browser/nodeunit.js"></script>
+    <script src="../vendor/three.js"></script>
+    <script src="../vendor/ConvexGeometry.js"></script>
+    <script src="../vendor/OrbitControls.js"></script>
+    <script src="../vendor/OBJLoader.js"></script>
+    <script src="../vendor/stats.js"></script>
+    <script src="../lib/recast.js"></script>
+    <link rel="stylesheet" href="../vendor/nodeunit/share/nodeunit.css"/>
     <script>
       this.exports = {};
       var r = new Recast('../lib/recast.js', function(){
