--- a/tests/test.withworker.html
+++ b/tests/test.withworker.html
@@ -7,7 +7,7 @@
     <script src="../vendor/OrbitControls.js"></script>
     <script src="../vendor/OBJLoader.js"></script>
     <script src="../vendor/stats.js"></script>
-    <script src="../lib/recast.js"></script>
+    <script src="../lib/recast.withworker.js"></script>
     <link rel="stylesheet" href="../vendor/nodeunit/share/nodeunit.css"/>
     <script>
       this.exports = {};
