--- a/tests/test.webgl.html
+++ b/tests/test.webgl.html
@@ -40,6 +40,10 @@
     <a href="test.webgl.html?agents=1000">1000 agents</a>
     <br><br>
 
+    <a href="test.webgl.html?build=solo">500 agents</a>
+    <a href="test.webgl.html?build=tiled">1000 agents</a>
+    <br><br>
+
 
     <button onclick="if (! navigationMesh) { location.search += '&navigationmesh=1' } else { navigationMesh.parent ? scene.remove(navigationMesh) : scene.add(navigationMesh); }">
       Toggle navigation mesh
