--- a/tests/test.webgl.html
+++ b/tests/test.webgl.html
@@ -40,8 +40,8 @@
     <a href="test.webgl.html?agents=1000">1000 agents</a>
     <br><br>
 
-    <a href="test.webgl.html?build=solo">buildSolo</a>
-    <a href="test.webgl.html?build=tiled">buildTiled</a>
+    <a href="test.webgl.html?build=buildSolo">buildSolo</a>
+    <a href="test.webgl.html?build=buildTiled">buildTiled</a>
     <br><br>
 
 
