--- a/tests/test.webgl.html
+++ b/tests/test.webgl.html
@@ -7,23 +7,25 @@
     <script src="../vendor/OrbitControls.js"></script>
     <script src="../vendor/OBJLoader.js"></script>
     <script src="../vendor/stats.js"></script>
-    <script src="../lib/recast.js"></script>
+    <script src="../lib/recast.withworker.js"></script>
     <link rel="stylesheet" href="../vendor/nodeunit/share/nodeunit.css"/>
+    <script>
+      this.exports = {};
+      var r = new Recast('../lib/recast.js', function(){
+        nodeunit.run({'recast.tests': exports});
+      });
+      var recast = function() {
+        return r;
+      };
+      this.require = function () { return recast; };
+    </script>
     <style>
       body { margin:0; padding:0 }
     </style>
-    <script>
-      var recast = this.recast;
-      this.require = function () { return recast; };
-      this.exports = {};
-    </script>
   </head>
   <body>
     <h1 id="nodeunit-header">Recast.js Test Suite</h1>
     <script src="recast.test.webgl.js"></script>
-    <script>
-    nodeunit.run({'recast.tests': exports});
-    </script>
 
     <p>
     In this example, you can see the mesh processed by recast.js <br>and rendered with three.js<br><br>
