--- a/tests/test.webgl.html
+++ b/tests/test.webgl.html
@@ -44,6 +44,9 @@
     <a href="test.webgl.html?build=buildTiled">buildTiled</a>
     <br><br>
 
+    <a href="test.webgl.html?addObstacles=1">randomly add obstacles</a>
+    <br><br>
+
 
     <button onclick="if (! navigationMesh) { location.search += '&navigationmesh=1' } else { navigationMesh.parent ? scene.remove(navigationMesh) : scene.add(navigationMesh); }">
       Toggle navigation mesh
