update recast source + better agents moving in tests

--- a/tests/test.offmeshs.html
+++ b/tests/test.offmeshs.html
@@ -7,8 +7,8 @@
     <script src="../vendor/OrbitControls.js"></script>
     <script src="../vendor/OBJLoader.js"></script>
     <script src="../vendor/stats.js"></script>
+    <script src="../vendor/async.js"></script>
     <script src="../vendor/tween.min.js"></script>
-
     <script src="../lib/recast.js"></script>
     <link rel="stylesheet" href="../vendor/nodeunit/share/nodeunit.css"/>
     <style>
