--- a/tests/test.webgl.html
+++ b/tests/test.webgl.html
@@ -7,6 +7,7 @@
     <script src="../vendor/OrbitControls.js"></script>
     <script src="../vendor/OBJLoader.js"></script>
     <script src="../vendor/stats.js"></script>
+    <script src="../vendor/async.js"></script>
     <script src="../lib/recast.js"></script>
     <link rel="stylesheet" href="../vendor/nodeunit/share/nodeunit.css"/>
     <style>
