--- a/tests/test.webgl.html
+++ b/tests/test.webgl.html
@@ -2,6 +2,7 @@
   <head>
     <title>Recast.js Test Suite</title>
     <script src="../node_modules/nodeunit/examples/browser/nodeunit.js"></script>
+    <script src="../vendor/jquery-1.11.3.min.js"></script>
     <script src="../vendor/three.js"></script>
     <script src="../vendor/ConvexGeometry.js"></script>
     <script src="../vendor/OrbitControls.js"></script>
@@ -24,14 +25,13 @@
     <script>
     nodeunit.run({'recast.tests': exports});
     </script>
-    
+
     <p>
-    In this example, you can see the mesh processed by recast.js <br>and rendered with three.js<br><br>
-    Each agents is controlled by recast.js, and a new random destination <br>is requested for each of them
-    <br><br>
-    Red polygons are unwalkable
+    Example of a crowd managed by recastjs, using a tilecache<br><br>
+    Each agents is given a new random destination from time to time<br><br>
+    Click on the mesh to add obstacles<br><br>
     </p>
-    
+
     <a href="test.webgl.html?agents=10">10 agents</a>
     <a href="test.webgl.html?agents=50">50 agents</a>
     <a href="test.webgl.html?agents=100">100 agents</a>
@@ -44,7 +44,7 @@
     <button onclick="if (! navigationMesh) { location.search += '&navigationmesh=1' } else { navigationMesh.parent ? scene.remove(navigationMesh) : scene.add(navigationMesh); }">
       Toggle navigation mesh
     </button>
-   
+
     <button id="sequence" onclick="sequence()" style="display:none">
       Reboot sequence
     </button>
